CVE-2021-25740/loadbalancer/01-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: attacker-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: victim-ns
