CVE-2021-25740/loadbalancer/02-victim.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensitive-app
  namespace: victim-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensitive-app
  template:
    metadata:
      labels:
        app: sensitive-app
    spec:
      containers:
        - name: web
          image: nginx:stable
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: sensitive-html
---
apiVersion: v1
kind: Service
metadata:
  name: sensitive-svc
  namespace: victim-ns
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: sensitive-app
